--- a/src/main/resources/prop/contentpage.properties
+++ b/src/main/resources/prop/contentpage.properties
@@ -1,18 +1,20 @@
 ### HEADER ###
-title.home=Home
-title.login=Login
-title.register=Register
+title.brand_name=Car|Book
+title.locale_ru=|\u0420\u0423
+title.locale_en=|EN
+title.home=Home - Car|Book
+title.login=Login - Car|Book
+title.register=Register - Car|Book
+title.cars=Cars - Car|Book
+title.office=Office - Car|Book
 label.home=home
 label.cars=cars
+label.office=office
 label.login=log in
 label.logout=log out
 ### HOME ###
-home.slogan=You rent more than a car.
 home.service=We are ready to help you 24/7.
 home.quality=Only new cars, only excellent service.
-home.appeal=Let us find the perfect car for you
-home.form.date_from=DATE FROM
-home.form.date_to=DATE TO
 home.form.car_type=CAR TYPE
 home.form.search=SEARCH A CAR
 ### LOGIN ###
@@ -21,6 +23,8 @@ login.password=PASSWORD
 login.log_in=LOG IN
 login.no_account=you have no account?
 login.not_authorized=Invalid email or password
+login.activated_user=Your account has been successfully activated, please log in
+login.not_activated_user=Account activation failed, log in to view the account status
 ### REGISTER ###
 register.email=EMAIL
 register.password=PASSWORD
@@ -31,8 +35,13 @@ register.driver_license=DRIVER LICENSE
 register.phone_number=PHONE NUMBER
 register.register=REGISTER
 register.invalid_parameters=Entered parameters not valid. Check your input
+### CARS ###
+cars.date_from=Date from
+cars.date_to=Date to
+cars.type=Select car type
+cars.filter=Filter
 ### FOOTER ###
-footer.copyright=Copyright
+footer.copyright=Copyright &copyCar|Book 2020
 ### INPUT FIELDS WARNING MESSAGES ###
 input.email=The entered string does not match the email address
 input.password=The password must contain at least one Digit and one UpperCase letter, min length 8 symbols
