add cars dao, cars page logic

--- a/src/main/resources/prop/contentpage.properties
+++ b/src/main/resources/prop/contentpage.properties
@@ -38,8 +38,15 @@ register.invalid_parameters=Entered parameters not valid. Check your input
 ### CARS ###
 cars.date_from=Date from
 cars.date_to=Date to
-cars.type=Select car type
+cars.type=Car type
+cars.price_range=Price range
 cars.filter=Filter
+cars.car_type.any=ANY
+cars.car_type.suv=SUV
+cars.car_type.sedan=SEDAN
+cars.car_type.minivan=MINIVAN
+cars.choose_params=Please select the desired rental period
+cars.nothing_to_show=According to these criteria there are no available cars for viewing
 ### FOOTER ###
 footer.copyright=Copyright &copyCar|Book 2020
 ### INPUT FIELDS WARNING MESSAGES ###
