add orderdao, add create order logic

--- a/src/main/resources/prop/contentpage.properties
+++ b/src/main/resources/prop/contentpage.properties
@@ -3,6 +3,7 @@ title.brand_name=Car|Book
 title.locale_ru=|\u0420\u0423
 title.locale_en=|EN
 title.home=Home - Car|Book
+title.order=Order - Car|Book
 title.login=Login - Car|Book
 title.register=Register - Car|Book
 title.cars=Cars - Car|Book
@@ -41,12 +42,29 @@ cars.date_to=Date to
 cars.type=Car type
 cars.price_range=Price range
 cars.filter=Filter
+cars.order=Order
+cars.model=Model
+cars.fuel_consumption=Consumption (l/100km)
+cars.cost=Cost ($/Day)
+cars.number_seats=Number Seats
 cars.car_type.any=ANY
 cars.car_type.suv=SUV
 cars.car_type.sedan=SEDAN
 cars.car_type.minivan=MINIVAN
 cars.choose_params=Please select the desired rental period
 cars.nothing_to_show=According to these criteria there are no available cars for viewing
+### CARS ###
+order.date_from=Date from
+order.date_to=Date to
+order.client_first_name=First Name
+order.client_second_name=Second Name
+order.car_model=Model
+order.car_type=Type
+order.fuel=Fuel
+order.fuel_consumption=Consumption (l/100km)
+order.number_seats=Number seats
+order.amount=Order amount
+order.order_car=Order
 ### FOOTER ###
 footer.copyright=Copyright &copyCar|Book 2020
 ### INPUT FIELDS WARNING MESSAGES ###
