--- a/src/main/resources/prop/notification_message.properties
+++ b/src/main/resources/prop/notification_message.properties
@@ -2,3 +2,5 @@ mail.registration.subject=Registration on the site CarBook
 mail.registration.appeal=Dear 
 mail.registration.gratitude=We are glad that you have chosen our car rental service!
 mail.registration.finish_reg=To complete the registration, follow the link below:
+mail.create_order.subject=New order on CarBook
+mail.create_order.text=You placed an order on CarBook. To track order status, go to your office
