--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,9 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <request-character-encoding>UTF-8</request-character-encoding>
+
+    <context-param>
+        <param-name>upload.location</param-name>
+        <param-value>C:/workspace/car_images/</param-value>
+    </context-param>
 </web-app>
