creating car logic

--- a/src/main/resources/prop/contentpage.properties
+++ b/src/main/resources/prop/contentpage.properties
@@ -3,16 +3,20 @@ title.brand_name=Car|Book
 title.locale_ru=|\u0420\u0423
 title.locale_en=|EN
 title.home=Home - Car|Book
-title.order=Order - Car|Book
+title.orders=Orders - Car|Book
 title.login=Login - Car|Book
 title.register=Register - Car|Book
 title.cars=Cars - Car|Book
+title.car=Car - Car|Book
 title.office=Office - Car|Book
+title.create_car=Create Car - Car|Book
 label.home=home
 label.cars=cars
 label.office=office
 label.login=log in
 label.logout=log out
+label.orders=orders
+label.users=users
 ### HOME ###
 home.service=We are ready to help you 24/7.
 home.quality=Only new cars, only excellent service.
@@ -36,7 +40,7 @@ register.driver_license=DRIVER LICENSE
 register.phone_number=PHONE NUMBER
 register.register=REGISTER
 register.invalid_parameters=Entered parameters not valid. Check your input
-### CARS ###
+### CLIENT_CARS ###
 cars.date_from=Date from
 cars.date_to=Date to
 cars.type=Car type
@@ -53,7 +57,50 @@ cars.car_type.sedan=SEDAN
 cars.car_type.minivan=MINIVAN
 cars.choose_params=Please select the desired rental period
 cars.nothing_to_show=According to these criteria there are no available cars for viewing
-### CARS ###
+### ADMIN_CARS ###
+admin_cars.type=Type
+admin_cars.filter=Filter
+admin_cars.edit=Edit
+admin_cars.add=ADD A CAR
+admin_cars.car_type.any=ANY
+admin_cars.car_type.suv=SUV
+admin_cars.car_type.sedan=SEDAN
+admin_cars.car_type.minivan=MINIVAN
+admin_cars.status=Status
+admin_cars.status.any=ANY
+admin_cars.status.available=AVAILABLE
+admin_cars.status.not_available=NOT AVAILABLE
+admin_cars.choose_params=Set the required filter values
+admin_cars.nothing_to_show=According to these criteria there are no available cars for viewing
+admin_cars.model=Model
+admin_cars.num_seats=Num.seats
+admin_cars.consumption=Consumption
+admin_cars.cost=Cost
+admin_cars.is_available=Is Available
+admin_cars.avail_now=Now:
+admin_cars.avail_change_to_true=Change to: "true"
+admin_cars.avail_change_to_false=Change to: "false"
+### CREATE_CAR ###
+create_car.model=Model:
+create_car.type=Type:
+create_car.fuel_type=Fuel Type:
+create_car.fuel_consumption=Fuel Consumption:
+create_car.number_seats=Number Seats:
+create_car.rent_cost=Rent Cost:
+create_car.is_available=Available:
+create_car.image_icon=Icon Image
+create_car.image_exterior=Exterior Image
+create_car.image_interior=Interior Image
+create_car.upload_image=Upload
+create_car.successfully_uploaded=Image successfully uploaded
+create_car.unsuccessfully_uploaded=Image loading error
+create_car.car_type.suv=SUV
+create_car.car_type.sedan=SEDAN
+create_car.car_type.minivan=MINIVAN
+create_car.fuel_type.diesel=DIESEL
+create_car.fuel_type.petrol=PETROL
+create_car.create=Create
+### ORDER ###
 order.date_from=Date from
 order.date_to=Date to
 order.client_first_name=First Name
