creating admin order logic

--- a/src/main/resources/prop/contentpage.properties
+++ b/src/main/resources/prop/contentpage.properties
@@ -8,7 +8,6 @@ title.login=Login - Car|Book
 title.register=Register - Car|Book
 title.cars=Cars - Car|Book
 title.car=Car - Car|Book
-title.office=Office - Car|Book
 title.create_car=Create Car - Car|Book
 label.home=home
 label.cars=cars
@@ -57,6 +56,27 @@ cars.car_type.sedan=SEDAN
 cars.car_type.minivan=MINIVAN
 cars.choose_params=Please select the desired rental period
 cars.nothing_to_show=According to these criteria there are no available cars for viewing
+### ADMIN_ORDERS ###
+admin_orders.order_status=Order Status
+admin_orders.client_email=Client Email
+admin_orders.car=Car orders
+admin_orders.filter=Filter
+admin_orders.status.any=Any
+admin_orders.status.pending=Pending
+admin_orders.status.awaiting_payment=Awaiting payment
+admin_orders.status.active=Active
+admin_orders.status.completed=Completed
+admin_orders.status.declined=Declined
+admin_orders.table.client_name=Name
+admin_orders.table.email=Email
+admin_orders.table.date_from=Date From
+admin_orders.table.date_to=Date To
+admin_orders.table.amount=Amount
+admin_orders.table.car_model=Car Model
+admin_orders.table.status=Status
+admin_orders.table.decline=DECLINE
+admin_orders.choose_params=Set the required filter values
+admin_orders.nothing_to_show=According to these criteria there are no available orders for viewing
 ### ADMIN_CARS ###
 admin_cars.type=Type
 admin_cars.filter=Filter
@@ -72,6 +92,7 @@ admin_cars.status.available=AVAILABLE
 admin_cars.status.not_available=NOT AVAILABLE
 admin_cars.choose_params=Set the required filter values
 admin_cars.nothing_to_show=According to these criteria there are no available cars for viewing
+admin_cars.created_car=Car successfully added to application
 admin_cars.model=Model
 admin_cars.num_seats=Num.seats
 admin_cars.consumption=Consumption
