creating admin user logic

--- a/src/main/resources/prop/contentpage.properties
+++ b/src/main/resources/prop/contentpage.properties
@@ -7,15 +7,15 @@ title.orders=Orders - Car|Book
 title.login=Login - Car|Book
 title.register=Register - Car|Book
 title.cars=Cars - Car|Book
+title.users=Users - Car|Book
 title.car=Car - Car|Book
 title.create_car=Create Car - Car|Book
-label.home=home
-label.cars=cars
-label.office=office
-label.login=log in
-label.logout=log out
-label.orders=orders
-label.users=users
+label.home=HOME
+label.cars=CARS
+label.login=LOG IN
+label.logout=LOG OUT
+label.orders=ORDERS
+label.users=USERS
 ### HOME ###
 home.service=We are ready to help you 24/7.
 home.quality=Only new cars, only excellent service.
@@ -58,8 +58,9 @@ cars.choose_params=Please select the desired rental period
 cars.nothing_to_show=According to these criteria there are no available cars for viewing
 ### ADMIN_ORDERS ###
 admin_orders.order_status=Order Status
+admin_orders.place_holder=not required
 admin_orders.client_email=Client Email
-admin_orders.car=Car orders
+admin_orders.car=Car Model
 admin_orders.filter=Filter
 admin_orders.status.any=Any
 admin_orders.status.pending=Pending
@@ -74,9 +75,15 @@ admin_orders.table.date_to=Date To
 admin_orders.table.amount=Amount
 admin_orders.table.car_model=Car Model
 admin_orders.table.status=Status
+admin_orders.table.action=Action
 admin_orders.table.decline=DECLINE
-admin_orders.choose_params=Set the required filter values
+admin_orders.table.confirm=CONFIRM
+admin_orders.choose_params=Press Filter to view information
 admin_orders.nothing_to_show=According to these criteria there are no available orders for viewing
+admin_orders.successfully_declined=Order was successfully declined
+admin_orders.successfully_confirmed=Order was successfully confirmed
+admin_orders.unsuccessfully_declined=Order was not declined try again later
+admin_orders.unsuccessfully_confirmed=Order was not confirmed try again later
 ### ADMIN_CARS ###
 admin_cars.type=Type
 admin_cars.filter=Filter
@@ -93,6 +100,8 @@ admin_cars.status.not_available=NOT AVAILABLE
 admin_cars.choose_params=Set the required filter values
 admin_cars.nothing_to_show=According to these criteria there are no available cars for viewing
 admin_cars.created_car=Car successfully added to application
+admin_cars.updated_car=Car successfully updated
+admin_cars.not_updated_car=Car was not updated, try again later
 admin_cars.model=Model
 admin_cars.num_seats=Num.seats
 admin_cars.consumption=Consumption
@@ -101,6 +110,25 @@ admin_cars.is_available=Is Available
 admin_cars.avail_now=Now:
 admin_cars.avail_change_to_true=Change to: "true"
 admin_cars.avail_change_to_false=Change to: "false"
+### ADMIN_USERS ###
+admin_users.client_status=Client Status
+admin_users.status.any=Any
+admin_users.status.pending=Pending
+admin_users.status.active=Active
+admin_users.status.blocked=Blocked
+admin_users.filter=FILTER
+admin_users.table.email=Email
+admin_users.table.name=Name
+admin_users.table.phone_number=Phone Number
+admin_users.table.driver_license=Driver License
+admin_users.table.status=Status
+admin_users.table.action=Action
+admin_users.action.block=BLOCK
+admin_users.action.unblock=UNBLOCK
+admin_users.choose_params=Press Filter to view information
+admin_users.nothing_to_show=According to these criteria there are no any clients for viewing
+admin_users.action_result.updated= Client status was successfully updated
+admin_users.action_result.not_updated= Client status was not updated try again later
 ### CREATE_CAR ###
 create_car.model=Model:
 create_car.type=Type:
