--- a/src/main/resources/prop/notification_message.properties
+++ b/src/main/resources/prop/notification_message.properties
@@ -3,4 +3,15 @@ mail.registration.appeal=Dear
 mail.registration.gratitude=We are glad that you have chosen our car rental service!
 mail.registration.finish_reg=To complete the registration, follow the link below:
 mail.create_order.subject=New order on CarBook
-mail.create_order.text=You placed an order on CarBook. To track order status, go to your office
+mail.create_order.text=You placed an order on CarBook. To track order status, go to order page
+mail.decline_order.subject=Order declined
+mail.decline_order.text.date=Order on date:
+mail.decline_order.text.car=Car:
+mail.decline_order.text.text=We cannot fulfill this order, we apologize for the inconvenience
+mail.expired_order.subject=Order expired
+mail.expired_order.text.date=Order on date:
+mail.expired_order.text.car=Car:
+mail.expired_order.text.text=Expired by reason:
+mail.expired_order.text.reason_payment= was not paid on time
+mail.expired_order.text.reason_not_confirm= was not activated in time by the Manager
+mail.expired_order.text.reason_default= was not designed correctly
