creating half client order logic add errors pages

--- a/src/main/resources/prop/contentpage.properties
+++ b/src/main/resources/prop/contentpage.properties
@@ -10,6 +10,7 @@ title.cars=Cars - Car|Book
 title.users=Users - Car|Book
 title.car=Car - Car|Book
 title.create_car=Create Car - Car|Book
+title.error=Error Car - Car|Book
 label.home=HOME
 label.cars=CARS
 label.login=LOG IN
@@ -64,10 +65,9 @@ admin_orders.car=Car Model
 admin_orders.filter=Filter
 admin_orders.status.any=Any
 admin_orders.status.pending=Pending
-admin_orders.status.awaiting_payment=Awaiting payment
+admin_orders.status.awaiting_payment=Awaiting Payment
 admin_orders.status.active=Active
 admin_orders.status.completed=Completed
-admin_orders.status.declined=Declined
 admin_orders.table.client_name=Name
 admin_orders.table.email=Email
 admin_orders.table.date_from=Date From
@@ -84,6 +84,17 @@ admin_orders.successfully_declined=Order was successfully declined
 admin_orders.successfully_confirmed=Order was successfully confirmed
 admin_orders.unsuccessfully_declined=Order was not declined try again later
 admin_orders.unsuccessfully_confirmed=Order was not confirmed try again later
+### CLIENT_ORDERS ###
+client_orders.table.date_from=Date From
+client_orders.table.date_to=Date To
+client_orders.table.amount=Amount
+client_orders.table.car_model=Car Model
+client_orders.table.status=Status
+client_orders.table.action=Action
+client_orders.table.pay=PAY
+client_orders.nothing_to_show=You have no any orders
+client_orders.successfully_paid=The order was successfully paid for
+client_orders.unsuccessfully_paid=Order payment error try again later error write us on email
 ### ADMIN_CARS ###
 admin_cars.type=Type
 admin_cars.filter=Filter
