--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,12 +5,16 @@
          version="4.0">
 
     <error-page>
+        <error-code>400</error-code>
+        <location>/jsp/error/error404.jsp</location>
+    </error-page>
+    <error-page>
         <error-code>404</error-code>
-        <location>/jsp/error404.jsp</location>
+        <location>/jsp/error/error404.jsp</location>
     </error-page>
     <error-page>
         <error-code>500</error-code>
-        <location>/jsp/error500.jsp</location>
+        <location>/jsp/error/error500.jsp</location>
     </error-page>
 
     <request-character-encoding>UTF-8</request-character-encoding>
