--- a/src/main/resources/prop/contentpage.properties
+++ b/src/main/resources/prop/contentpage.properties
@@ -4,32 +4,42 @@ title.locale_ru=|\u0420\u0423
 title.locale_en=|EN
 title.home=Home - Car|Book
 title.orders=Orders - Car|Book
+title.payment=Payment - Car|Book
 title.login=Login - Car|Book
 title.register=Register - Car|Book
 title.cars=Cars - Car|Book
 title.users=Users - Car|Book
 title.car=Car - Car|Book
 title.create_car=Create Car - Car|Book
-title.error=Error Car - Car|Book
+title.error=Error - Car|Book
 label.home=HOME
 label.cars=CARS
 label.login=LOG IN
 label.logout=LOG OUT
 label.orders=ORDERS
+label.payment=PAYMENT
 label.users=USERS
 ### HOME ###
-home.service=We are ready to help you 24/7.
-home.quality=Only new cars, only excellent service.
-home.form.car_type=CAR TYPE
-home.form.search=SEARCH A CAR
+home.slide_1.label=Travelling
+home.slide_1.text=Is usually a positive moments. And with our service they will always be like this
+home.slide_2.label=Comfort
+home.slide_2.text=This is an important part of the journey. In our fleet you will find the car \
+  that will fully satisfy your idea of comfort
+home.slide_3.label=Trustworthiness
+home.slide_3.text=This is the foundation of our business. With us, you can be confident in the car \
+   and not think about it, but only about the journey
+home.slide_4.label=Time
+home.slide_4.text=Weekends? It's not about us. The hours of work? Too. We are ready to help you 24/7
+home.mark_1.text=More than thirty new cars of various classes
+home.mark_2.text=Fair price guarantee
+home.mark_3.text=Five years of excellent experience in this field
+home.mark_4.text=Only current offers and booking confirmation
 ### LOGIN ###
 login.email=EMAIL
 login.password=PASSWORD
 login.log_in=LOG IN
-login.no_account=you have no account?
+login.no_account=You have no account?
 login.not_authorized=Invalid email or password
-login.activated_user=Your account has been successfully activated, please log in
-login.not_activated_user=Account activation failed, log in to view the account status
 ### REGISTER ###
 register.email=EMAIL
 register.password=PASSWORD
@@ -51,10 +61,10 @@ cars.model=Model
 cars.fuel_consumption=Consumption (l/100km)
 cars.cost=Cost ($/Day)
 cars.number_seats=Number Seats
-cars.car_type.any=ANY
-cars.car_type.suv=SUV
-cars.car_type.sedan=SEDAN
-cars.car_type.minivan=MINIVAN
+cars.car_type.any=Any
+cars.car_type.suv=Suv
+cars.car_type.sedan=Sedan
+cars.car_type.minivan=Minivan
 cars.choose_params=Please select the desired rental period
 cars.nothing_to_show=According to these criteria there are no available cars for viewing
 ### ADMIN_ORDERS ###
@@ -90,7 +100,6 @@ client_orders.table.date_to=Date To
 client_orders.table.amount=Amount
 client_orders.table.car_model=Car Model
 client_orders.table.status=Status
-client_orders.table.action=Action
 client_orders.table.pay=PAY
 client_orders.nothing_to_show=You have no any orders
 client_orders.successfully_paid=The order was successfully paid for
@@ -100,14 +109,14 @@ admin_cars.type=Type
 admin_cars.filter=Filter
 admin_cars.edit=Edit
 admin_cars.add=ADD A CAR
-admin_cars.car_type.any=ANY
-admin_cars.car_type.suv=SUV
-admin_cars.car_type.sedan=SEDAN
-admin_cars.car_type.minivan=MINIVAN
+admin_cars.car_type.any=Any
+admin_cars.car_type.suv=Suv
+admin_cars.car_type.sedan=Sedan
+admin_cars.car_type.minivan=Minivan
 admin_cars.status=Status
-admin_cars.status.any=ANY
-admin_cars.status.available=AVAILABLE
-admin_cars.status.not_available=NOT AVAILABLE
+admin_cars.status.any=Any
+admin_cars.status.available=Available
+admin_cars.status.not_available=Not Available
 admin_cars.choose_params=Set the required filter values
 admin_cars.nothing_to_show=According to these criteria there are no available cars for viewing
 admin_cars.created_car=Car successfully added to application
@@ -154,11 +163,11 @@ create_car.image_interior=Interior Image
 create_car.upload_image=Upload
 create_car.successfully_uploaded=Image successfully uploaded
 create_car.unsuccessfully_uploaded=Image loading error
-create_car.car_type.suv=SUV
-create_car.car_type.sedan=SEDAN
-create_car.car_type.minivan=MINIVAN
-create_car.fuel_type.diesel=DIESEL
-create_car.fuel_type.petrol=PETROL
+create_car.car_type.suv=Suv
+create_car.car_type.sedan=Sedan
+create_car.car_type.minivan=Minivan
+create_car.fuel_type.diesel=Diesel
+create_car.fuel_type.petrol=Petrol
 create_car.create=Create
 ### ORDER ###
 order.date_from=Date from
@@ -172,6 +181,27 @@ order.fuel_consumption=Consumption (l/100km)
 order.number_seats=Number seats
 order.amount=Order amount
 order.order_car=Order
+### PAYMENT ###
+payment.label.card_holder=Card Holder
+payment.label.card_number=Card number
+payment.label.expiration=Expiration
+payment.label.cvv=CVV
+payment.placeholder.full_name=Jeff Doe
+payment.placeholder.card_number=Your card number
+payment.placeholder.month=MM
+payment.placeholder.year=YY
+payment.placeholder.cvv=CVV code
+payment.submit.pay=PAY
+payment.label.payment_error=Incorrect card parameters. Payment failed
+### NOTIFICATION ###
+notification.activated_user=Your account has been successfully activated, please log in
+notification.not_activated_user=Account activation failed, write us an email
+notification.ordering_car=You have successfully placed an order in our service. \
+  To track the status go to the orders page
+notification.not_ordering_car=Error when placing an order. \
+  Please try again later or contact us via email
+notification.registered_user=Congratulations on your registration on our website. \
+  To your email sent to activate the account click on the link from the letter
 ### FOOTER ###
 footer.copyright=Copyright &copyCar|Book 2020
 ### INPUT FIELDS WARNING MESSAGES ###
