--- a/src/main/resources/prop/notification_message.properties
+++ b/src/main/resources/prop/notification_message.properties
@@ -15,3 +15,6 @@ mail.expired_order.text.text=Expired by reason:
 mail.expired_order.text.reason_payment= was not paid on time
 mail.expired_order.text.reason_not_confirm= was not activated in time by the Manager
 mail.expired_order.text.reason_default= was not designed correctly
+mail.complete_order.subject=Order completed
+mail.complete_order.text.car=Car:
+mail.complete_order.text.text=The order is completed, thank you for using our service
