--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,5 +23,11 @@
         <param-name>upload.location</param-name>
         <param-value>C:/workspace/car_images/</param-value>
     </context-param>
+    <jsp-config>
+        <taglib>
+            <taglib-uri>paginationtags</taglib-uri>
+            <taglib-location>/WEB-INF/tld/pagination.tld</taglib-location>
+        </taglib>
 
+    </jsp-config>
 </web-app>
