add ru content, refactor logs

--- a/src/main/resources/config/mail.properties
+++ b/src/main/resources/config/mail.properties
@@ -1,6 +1,4 @@
 mail.smtp.host=smtp.gmail.com
-mail.smtp.port=465
 mail.user.name=balabasbk@gmail.com
-mail.user.password=plotva106245
-mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+mail.user.password=plotva1062452011av
 mail.smtp.auth=true
