--- a/src/main/resources/config/mail.properties
+++ b/src/main/resources/config/mail.properties
@@ -1,4 +1,4 @@
 mail.smtp.host=smtp.gmail.com
 mail.user.name=balabasbk@gmail.com
-mail.user.password=plotva1062452011av
+mail.user.password=mailPass
 mail.smtp.auth=true
