--- a/src/main/resources/config/mail.properties
+++ b/src/main/resources/config/mail.properties
@@ -1,4 +1,6 @@
 mail.smtp.host=smtp.gmail.com
+mail.smtp.port=465
 mail.user.name=balabasbk@gmail.com
 mail.user.password=mailPass
+mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 mail.smtp.auth=true
